--- a/src/main/Client/ui/Brower.ui
+++ b/src/main/Client/ui/Brower.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>SDP客户端</string>
   </property>
-  <widget class="QWebEngineView" name="brower">
+  <widget class="QTextBrowser" name="brower">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -22,20 +22,8 @@
      <height>591</height>
     </rect>
    </property>
-   <property name="url">
-    <url>
-     <string>about:blank</string>
-    </url>
-   </property>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QWebEngineView</class>
-   <extends>QWidget</extends>
-   <header location="global">QtWebEngineWidgets/QWebEngineView</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
